# website

./: Makefile  docker-compose.yml
backend/: config.example.toml  pyproject.toml
backend/db/migrations/versions/: 2025-08-22__df107028cc8c.py  2025-08-22__ffd430530011.py  2025-11-21__3c433fdf07a6.py  2025-11-21__62d14f14a038.py
backend/src/kc/: cache.py  client.py  enums.py  exceptions.py  settings.py
backend/src/kc/api/: __init__.py  asgi.py  auth.py  dependencies.py  exceptions.py  repositories.py  routes.py  schemas.py  services.py  settings.py
backend/src/kc/contrib/litestar/: __init__.py  constants.py  dependencies.py  exception_handler.py  factory.py  openapi.py  plugins.py  settings.py
backend/src/kc/contrib/openai/: __init__.py  embeddings.py  gpt.py  settings.py
backend/src/kc/contrib/redis/: client.py  settings.py
backend/src/kc/contrib/sqlalchemy/: __init__.py  engine.py  settings.py
backend/src/kc/contrib/stripe/: settings.py
backend/src/kc/models/: __init__.py  account.py  event.py  event_registration.py  organizer.py  participant.py  segment.py  segment_registration.py  speaker.py
backend/src/kc/nlp/: __init__.py  llm.py
backend/src/kc/server/: __init__.py  __main__.py  asgi.py  auth.py  dependencies.py  exceptions.py  repositories.py  routes.py  schemas.py  services.py
ci/compose/: api.docker-compose.yml  dev.docker-compose.yml  infra.docker-compose.yml  migrator.docker-compose.yml
ci/docker/: Dockerfile
frontend/: package-lock.json  package.json
frontend/src/: app.css  app.html
frontend/src/routes/: +page.svelte
