[project]
name = "kozcampus"
version = "0.1.0"
description = ""
authors = [
    {name = "Dénes Balogh",email = "denes.balogh@icloud.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
    "litestar[brotli,jwt,redis,sqlalchemy] (>=2.17.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "litestar-saq (>=0.5.3,<0.6.0)",
    "openai (>=1.101.0,<2.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "authlib (>=1.6.1,<2.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)"
]

[tool.poetry]
packages = [
    { include = "kc", from = "src" }
]

[tool.poetry.scripts]
kc = "kc.api.__main__:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
